skills items padding

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
       </div>
       <!--Dropdown-->
       <div class="dropdown">
-        <button onclick="dropdown()" data-dropBtn title="View Full Skill-set" class="dropbtn">My Skills<i class="fa-regular fa-code"></i></button>
+        <button onclick="dropdown()" data-dropBtn title="View Full Skill-set" class="dropbtn cta">My Skills<i class="fa-regular fa-code"></i></button>
         <div id="myDropdown" class="dropdown-content">
 
           <div class="skills-bottom">
