work item- hlavutelo

--- a/index.html
+++ b/index.html
@@ -442,10 +442,10 @@
             <h3>hlavutelo Trading & projects&trade;</h3>
             <p><a href="https://hlavutelotrading.co.za/" target="_blank">www.hlavutelotrading.co.za</a></p>
           </div>
-          <figure>
+          <figure class="scroll-snap">
             <img src="img/hlavutelo-screen.png" alt="Hlavutelo Trading & Projects">
-            <!-- <a href="https://hlavutelotrading.co.za/" target="_blank" title="Github Repository">
-          </a> -->
+            <img src="img/hlavutelo-screen-2.png" alt="Hlavutelo Trading & Projects">
+            <img src="img/hlavutelo-screen-3.png" alt="Hlavutelo Trading & Projects">
           </figure>
           <a class="work-btn view-site-btn" title="Visit Website" href="https://hlavutelotrading.co.za/" target="_blank">view website<i class="fas fa-arrow"></i></a>
           <a class="work-btn view-repo-btn" title="iew Repository" href="https://github.com/ShakexSempe/hlavutelo" target="_blank">view repository</a>
