work item- magoveni

--- a/index.html
+++ b/index.html
@@ -456,10 +456,10 @@
             <h3>Magoveni Construction&trade;</h3>
             <p>Homepage</p>
           </div>
-          <figure>
+          <figure class="scroll-snap">
             <img src="img/magoveni-screen.png" alt="Magoveni Construction logo">
-            <!-- <a href="https://ngoveni-construction.netlify.app/" target="_blank" title="View Website">
-          </a> -->
+            <img src="img/magoveni-screen-2.png" alt="Magoveni Construction logo">
+            <img src="img/magoveni-screen-3.png" alt="Magoveni Construction logo">
           </figure>
           <a class="work-btn view-site-btn" href="https://ngoveni-construction.netlify.app/" target="_blank">view website</a>
           <a class="work-btn view-repo-btn" href="https://github.com/ShakexSempe/ngoveni-construction" target="_blank">view repository</a>
