--- a/index.html
+++ b/index.html
@@ -433,8 +433,8 @@
             <img src="img/orich-screen-2.png" alt="Orich Trading & Projects">
             <img src="img/orich-screen-3.png" alt="Orich Trading & Projects">
           </figure>
-          <a class="work-btn view-site-btn" href="https://orich-trading-projects.netlify.app/" target="_blank">view website</a>
-          <a class="work-btn view-repo-btn" href="https://github.com/ShakexSempe/orich-trading" target="_blank">view repository</a>
+          <a class="work-btn view-site-btn" href="https://orich-trading-projects.netlify.app/" target="_blank">view website<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+          <a class="work-btn view-repo-btn" href="https://github.com/ShakexSempe/orich-trading" target="_blank">view repository<i class="fa-regular fa-code"></i></a>
         </div>
         <!-- HLAVUTELO -->
         <div class="work-item io-item">
@@ -447,10 +447,10 @@
             <img src="img/hlavutelo-screen-2.png" alt="Hlavutelo Trading & Projects">
             <img src="img/hlavutelo-screen-3.png" alt="Hlavutelo Trading & Projects">
           </figure>
-          <a class="work-btn view-site-btn" title="Visit Website" href="https://hlavutelotrading.co.za/" target="_blank">view website<i class="fas fa-arrow"></i></a>
-          <a class="work-btn view-repo-btn" title="iew Repository" href="https://github.com/ShakexSempe/hlavutelo" target="_blank">view repository</a>
+          <a class="work-btn view-site-btn" title="Visit Website" href="https://hlavutelotrading.co.za/" target="_blank">view website<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+          <a class="work-btn view-repo-btn" title="iew Repository" href="https://github.com/ShakexSempe/hlavutelo" target="_blank">view repository<i class="fa-regular fa-code"></i></a>
         </div>
-        <!-- MUNCH UP -->
+        <!-- MAGOVENI -->
         <div class="work-item io-item">
           <div class="work-title">
             <h3>Magoveni Construction&trade;</h3>
@@ -461,8 +461,8 @@
             <img src="img/magoveni-screen-2.png" alt="Magoveni Construction logo">
             <img src="img/magoveni-screen-3.png" alt="Magoveni Construction logo">
           </figure>
-          <a class="work-btn view-site-btn" href="https://ngoveni-construction.netlify.app/" target="_blank">view website</a>
-          <a class="work-btn view-repo-btn" href="https://github.com/ShakexSempe/ngoveni-construction" target="_blank">view repository</a>
+          <a class="work-btn view-site-btn" href="https://ngoveni-construction.netlify.app/" target="_blank">view website<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+          <a class="work-btn view-repo-btn" href="https://github.com/ShakexSempe/ngoveni-construction" target="_blank">view repository<i class="fa-regular fa-code"></i></a>
         </div>
         <!-- MUNCH UP -->
         <!-- <div class="work-item io-item">
