footer nav emial link

--- a/index.html
+++ b/index.html
@@ -729,7 +729,8 @@
 <!-- BOTTOM NAVIGATION -->
 <div class="bottom-nav" id="bottom-nav">
   <figure class="link-item item-1">
-    <a href="#about"><i class="fas fa-user"></i>about</a>
+    <!-- <a href="#about"><i class="fas fa-user"></i>about</a> -->
+    <a href="mailto:bshakex@gmail.com"><i class="fas fa-envelope"></i>contact</a>
   </figure>
   <figure class="link-item item-2">
     <a href="#home"><i class="fas fa-house"></i>home</a>
