--- a/index.html
+++ b/index.html
@@ -426,12 +426,12 @@
         <div  class="work-item io-item">
           <div class="work-title">
             <h3>Orich Trading & projects&trade;</h3>
-            <p><a href="https://orichtrading.co.za" target="_blank">www.orichtrading.co.za</a></p>
+            <p><a href="https://orichtrading.co.za" target="_blank">orichtrading.co.za</a></p>
           </div>
           <figure class="scroll-snap">
-            <img src="img/orich-screen.png" alt="Orich Trading & Projects">
-            <img src="img/orich-screen-2.png" alt="Orich Trading & Projects">
-            <img src="img/orich-screen-3.png" alt="Orich Trading & Projects">
+            <img src="img/orich-screen.png" loading="lazy" alt="Orich Trading & Projects website">
+            <img src="img/orich-screen-2.png" loading="lazy" alt="Orich Trading & Projects website">
+            <img src="img/orich-screen-3.png" loading="lazy" alt="Orich Trading & Projects website">
           </figure>
           <a class="work-btn view-site-btn" href="https://orich-trading-projects.netlify.app/" target="_blank">view website<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
           <a class="work-btn view-repo-btn" href="https://github.com/ShakexSempe/orich-trading" target="_blank">view repository<i class="fa-regular fa-code"></i></a>
@@ -440,12 +440,12 @@
         <div class="work-item io-item">
           <div class="work-title">
             <h3>hlavutelo Trading & projects&trade;</h3>
-            <p><a href="https://hlavutelotrading.co.za/" target="_blank">www.hlavutelotrading.co.za</a></p>
+            <p><a href="https://hlavutelotrading.co.za/" target="_blank">hlavutelotrading.co.za</a></p>
           </div>
           <figure class="scroll-snap">
-            <img src="img/hlavutelo-screen.png" alt="Hlavutelo Trading & Projects">
-            <img src="img/hlavutelo-screen-2.png" alt="Hlavutelo Trading & Projects">
-            <img src="img/hlavutelo-screen-3.png" alt="Hlavutelo Trading & Projects">
+            <img src="img/hlavutelo-screen.png" loading="lazy" alt="Hlavutelo Trading & Projects webiste">
+            <img src="img/hlavutelo-screen-2.png" loading="lazy" alt="Hlavutelo Trading & Projects webiste">
+            <img src="img/hlavutelo-screen-3.png" loading="lazy" alt="Hlavutelo Trading & Projects webiste">
           </figure>
           <a class="work-btn view-site-btn" title="Visit Website" href="https://hlavutelotrading.co.za/" target="_blank">view website<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
           <a class="work-btn view-repo-btn" title="iew Repository" href="https://github.com/ShakexSempe/hlavutelo" target="_blank">view repository<i class="fa-regular fa-code"></i></a>
@@ -454,12 +454,12 @@
         <div class="work-item io-item">
           <div class="work-title">
             <h3>Magoveni Construction&trade;</h3>
-            <p>Homepage</p>
+            <p><a href="https://magoveni.netlify.app" target="_blank">magoveni.netlify.app</a></p>
           </div>
           <figure class="scroll-snap">
-            <img src="img/magoveni-screen.png" alt="Magoveni Construction logo">
-            <img src="img/magoveni-screen-2.png" alt="Magoveni Construction logo">
-            <img src="img/magoveni-screen-3.png" alt="Magoveni Construction logo">
+            <img src="img/magoveni-screen.png" loading="lazy" alt="Magoveni Construction website">
+            <img src="img/magoveni-screen-2.png" loading="lazy" alt="Magoveni Construction website">
+            <img src="img/magoveni-screen-3.png" loading="lazy" alt="Magoveni Construction website">
           </figure>
           <a class="work-btn view-site-btn" href="https://ngoveni-construction.netlify.app/" target="_blank">view website<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
           <a class="work-btn view-repo-btn" href="https://github.com/ShakexSempe/ngoveni-construction" target="_blank">view repository<i class="fa-regular fa-code"></i></a>
