work page logo link

--- a/pages/work.html
+++ b/pages/work.html
@@ -59,7 +59,7 @@
         <div class="navbar">
             <nav id="nav">
                 <div class="logo">
-                    <a href="#home" title="Shakex Sempe" class="scroll-link">
+                    <a href="../index.html" title="Shakex Sempe" class="scroll-link">
                         <p>shakex<span>Sempe</span></p>
                     </a>
                 </div>
