--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <!-- LOADER -->
   <div class="loader_bg">
     <div class="spinner">
-      loading
+      <!-- loading -->
       <div class="sector sector-1"></div>
       <div class="sector sector-2"></div>
       <div class="sector sector-3"></div>
