section title io

--- a/index.html
+++ b/index.html
@@ -50,14 +50,13 @@
 
 <body>
   <!-- LOADER -->
-  <div class="loader_bg">
+  <!-- <div class="loader_bg">
     <div class="spinner">
-      <!-- loading -->
       <div class="sector sector-1"></div>
       <div class="sector sector-2"></div>
       <div class="sector sector-3"></div>
     </div>
-  </div>
+  </div> -->
   <!-- HEADER -->
   <header id="header" data-header class="header">
     <!-- SKIP TO MAIN LINK -->
@@ -167,7 +166,7 @@
   <section class="link-section" id="skills">
     <div class="skills container">
       <div class="skills-header">
-        <h2 title="skills" data-text="skills" class="section-title">Sk<span>i</span>lls</h2>
+        <h2 title="skills" data-text="skills" class="section-title io-item">Sk<span>i</span>lls</h2>
       </div>
       <div class="skills-intro io-item">
         <article class="skills-article">
@@ -419,7 +418,7 @@
   <section id="work" class="link-section">
     <div class="work">
       <div class="work-header">
-        <h2 data-text="projects" class="section-title">pro<span>j</span>ects</h2>
+        <h2 data-text="projects" class="section-title io-item">pro<span>j</span>ects</h2>
       </div>
       <div class="work-items">
         <!-- ORICH -->
@@ -486,7 +485,7 @@
     <div id="about-target" class="about container">
       <div class="col-right">
         <div class="about-header">
-          <h2 title="about me: boitumelo sempe" data-text="aboutme" class="section-title">About<span>me</span></h2>
+          <h2 title="About Me: Boitumelo Shakex Sempe" data-text="aboutme" class="section-title io-item">About<span>me</span></h2>
         </div>
         <div class="article-container">
           <article class="about-article">
@@ -556,11 +555,24 @@
       </div>
     </div>
   </section>
+    <!--PROJECTS SECTION-->
+    <section class="link-section" id="projects">
+      <div class="projects container">
+        <div class="projects-header">
+          <h2 title="repository links" data-text="portfolio" id="projects-h1" class="section-title io-item">Port<span>f</span>olio
+          </h2>
+        </div>
+        <div data-scroll class="all-projects">
+          <!-- /PROJECTS.JS -->
+        </div>
+      </div>
+    </section>
   <!-- CONTACT SECTION-->
   <section class="link-section" id="contact">
     <div class="contact container">
       <div class="contact-header">
-        <h2 title="contact information" data-text="contactinfo" class="section-title">Contact<span>Info</span></h2>
+        <!-- <h2 title="contact information" data-text="contactinfo" class="section-title io-item">Contact<span>Info</span></h2> -->
+        <h2 title="contact information" data-text="contactinfo" class="section-title io-item">Contact<span>Info</span></h2>
       </div>
       <div class="contact-items">
         <!-- EMAIL ITEM -->
@@ -609,18 +621,6 @@
     </figure>
   </div>
     <!-- end of padding section -->
-  </section>
-  <!--PROJECTS SECTION-->
-  <section class="link-section" id="projects">
-    <div class="projects container">
-      <div class="projects-header">
-        <h2 title="repository links" data-text="portfolio" id="projects-h1" class="section-title">Port<span>f</span>olio
-        </h2>
-      </div>
-      <div data-scroll class="all-projects">
-        <!-- /PROJECTS.JS -->
-      </div>
-    </div>
   </section>
   <!-- FOOTER -->
   <section class="link-section" id="footer">
