removed scroll-snap lazy load

--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
 
 <body>
   <!-- LOADER -->
-  <div class="loader_bg">
+  <!-- <div class="loader_bg">
     <div class="spinner">
       <div class="sector sector-1"></div>
       <div class="sector sector-2"></div>
       <div class="sector sector-3"></div>
     </div>
-  </div>
+  </div> -->
   <!-- HEADER -->
   <header id="header" data-header class="header">
     <!-- SKIP TO MAIN LINK -->
@@ -429,8 +429,8 @@
           </div>
           <figure class="scroll-snap">
             <img src="img/orich-screen.png" loading="lazy" alt="Orich Trading & Projects website">
-            <img src="img/orich-screen-2.png" loading="lazy" alt="Orich Trading & Projects website">
-            <img src="img/orich-screen-3.png" loading="lazy" alt="Orich Trading & Projects website">
+            <img src="img/orich-screen-2.png"  alt="Orich Trading & Projects website">
+            <img src="img/orich-screen-3.png"  alt="Orich Trading & Projects website">
           </figure>
           <a class="work-btn view-site-btn" href="https://orich-trading-projects.netlify.app/" target="_blank">view website<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
           <a class="work-btn view-repo-btn" href="https://github.com/ShakexSempe/orich-trading" target="_blank">view repository<i class="fa-regular fa-code"></i></a>
@@ -443,8 +443,8 @@
           </div>
           <figure class="scroll-snap">
             <img src="img/hlavutelo-screen.png" loading="lazy" alt="Hlavutelo Trading & Projects webiste">
-            <img src="img/hlavutelo-screen-2.png" loading="lazy" alt="Hlavutelo Trading & Projects webiste">
-            <img src="img/hlavutelo-screen-3.png" loading="lazy" alt="Hlavutelo Trading & Projects webiste">
+            <img src="img/hlavutelo-screen-2.png"  alt="Hlavutelo Trading & Projects webiste">
+            <img src="img/hlavutelo-screen-3.png"  alt="Hlavutelo Trading & Projects webiste">
           </figure>
           <a class="work-btn view-site-btn" title="Visit Website" href="https://hlavutelotrading.co.za/" target="_blank">view website<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
           <a class="work-btn view-repo-btn" title="iew Repository" href="https://github.com/ShakexSempe/hlavutelo" target="_blank">view repository<i class="fa-regular fa-code"></i></a>
@@ -457,8 +457,8 @@
           </div>
           <figure class="scroll-snap">
             <img src="img/magoveni-screen.png" loading="lazy" alt="Magoveni Construction website">
-            <img src="img/magoveni-screen-2.png" loading="lazy" alt="Magoveni Construction website">
-            <img src="img/magoveni-screen-3.png" loading="lazy" alt="Magoveni Construction website">
+            <img src="img/magoveni-screen-2.png"  alt="Magoveni Construction website">
+            <img src="img/magoveni-screen-3.png"  alt="Magoveni Construction website">
           </figure>
           <a class="work-btn view-site-btn" href="https://ngoveni-construction.netlify.app/" target="_blank">view website<i class="fa-solid fa-arrow-up-right-from-square"></i></a>
           <a class="work-btn view-repo-btn" href="https://github.com/ShakexSempe/ngoveni-construction" target="_blank">view repository<i class="fa-regular fa-code"></i></a>
