removed skills btn io

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <br><br>
           </p>
         </article>
-        <div class="skills-drop io-item">
+        <div class="skills-drop">
           <p class="skills-drop-p">View my full  Web Development skill set in the dropdown section below.</p>
         </div>
       </div>
