skills bttom top btn

--- a/index.html
+++ b/index.html
@@ -186,13 +186,13 @@
           </div>
         </div>
         <!--Dropdown-->
-        <div class="dropdown">
+        <div class="dropdown" id="dropdown">
           <button onclick="dropdown()" data-dropBtn title="View Full Skill-set" class="dropbtn cta">My Skills<i
               class="fa-regular fa-code"></i></button>
           <div id="myDropdown" class="dropdown-content">
 
             <div class="skills-bottom">
-
+              <div class="top-btn"><a href="#work" class="fas fa-arrow-down"></a></div>
               <div title="HTML5" data-scroll id="html5" class="skills-item">
                 <div class="icon">
                   <i class="fab fa-html5" alt="icon"></i>
