skills-bottom close btn

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
           <div id="myDropdown" class="dropdown-content">
 
             <div class="skills-bottom">
-              <div class="top-btn"><a href="#work" class="fas fa-arrow-down"></a></div>
+              <div class="top-btn" id="top-btn"><a href="#work" class="fas fa-arrow-down"></a></div>
               <div title="HTML5" data-scroll id="html5" class="skills-item">
                 <div class="icon">
                   <i class="fab fa-html5" alt="icon"></i>
