--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                 <ul>
                   <li>Basic Algorithm Scripting</li>
                   <li>ES6 Fundamentals</li>
-                  <li>Intersection Observer</li>
+                  <li>Typescript</li>
                   <li>JSon</li>
                 </ul>
                 <p> </p>
