removed data scroll from contact items

--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
       </div>
       <div class="contact-items">
         <!-- EMAIL ITEM -->
-        <article title="Email Info" data-scroll class="contact-item io-item">
+        <article title="Email Info" class="contact-item io-item">
           <div class="icon">
             <i class="fas fa-envelope"></i>
           </div>
@@ -596,7 +596,7 @@
           </div>
         </article>
         <!-- PHONE NUMBER -->
-        <article title="Phone Number" data-scroll class="contact-item io-item">
+        <article title="Phone Number" class="contact-item io-item">
           <div class="icon">
             <i class="fas fa-phone-alt"></i>
           </div>
@@ -607,7 +607,7 @@
           </div>
         </article>
         <!-- WHATSAPP NUMBER -->
-        <article title="WhatsApp Number" data-scroll class="contact-item io-item">
+        <article title="WhatsApp Number" class="contact-item io-item">
           <div class="icon">
             <i class="fa-brands fa-whatsapp"></i>
           </div>
