--- a/index.html
+++ b/index.html
@@ -585,33 +585,38 @@
       <div class="contact-items">
         <!-- EMAIL ITEM -->
         <article title="Email Info" class="contact-item io-item">
-          <div class="icon">
-            <i class="fas fa-envelope"></i>
+          <div class="title">
+            <h3>Email</h3>
+            <div class="icon">
+            <i class="fas fa-envelope"></i></div>
           </div>
-          <h3>Email</h3>
           <div class="contact-info">
             <p>bshakex@gmail.com</p>
-            <a href="mailto:bshakex@gmail.com" title="Send Email to Shakex Sempe"><i class="fas fa-at"></i>
-              ..email me</a>
+            <a href="mailto:bshakex@gmail.com" title="Send Email to Shakex Sempe">send email<i class="fas fa-at"></i>
+              </a>
           </div>
         </article>
         <!-- PHONE NUMBER -->
         <article title="Phone Number" class="contact-item io-item">
+          <div class="title">
+            <h3>Phone</h3>
           <div class="icon">
             <i class="fas fa-phone-alt"></i>
           </div>
-          <h3>Phone</h3>
+        </div>
           <div id="phone" class="contact-info">
             <p>+27 72 600 5104</p>
-            <a href="tel:+27726005104" title="Call Shakex"><i class="fas fa-phone-alt"></i> ..call me</a>
+            <a href="tel:+27726005104" title="Call Shakex">call now<i class="fas fa-phone-alt"></i></a>
           </div>
         </article>
         <!-- WHATSAPP NUMBER -->
         <article title="WhatsApp Number" class="contact-item io-item">
+          <div class="title">
+            <h3>WhatsApp</h3>
           <div class="icon">
             <i class="fa-brands fa-whatsapp"></i>
           </div>
-          <h3>WhatsApp</h3>
+        </div>
           <div id="whatsapp" class="contact-info">
             <p>+27716876941</p>
             <a href="https://wa.me/+27716876941" target="_blank" title="WhatsApp Shakex"><i class="fa-solid fa-mobile-screen-button"></i> ..whatsapp me</a>
@@ -620,14 +625,7 @@
 
       </div>
     </div>
-    <!-- PADDING SECTION -->
-  <div id="projects-pad" class="section-pad pad-intro">
-    <figure data-scroll>
-      <a title="Github contribution activity" href="#work">
-        <img src="img/git-min.png" loading="lazy" alt="github contribution activity">
-      </a>
-    </figure>
-  </div>
+   
     <!-- end of padding section -->
   </section>
   <!-- FOOTER -->
