--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
           </div>
           <div class="contact-info">
             <p>bshakex@gmail.com</p>
-            <a href="mailto:bshakex@gmail.com" title="Send Email to Shakex Sempe">send email<i class="fas fa-at"></i>
+            <a href="mailto:bshakex@gmail.com" title="Send email to Shakex">send email<i class="fas fa-at"></i>
               </a>
           </div>
         </article>
@@ -619,7 +619,7 @@
         </div>
           <div id="whatsapp" class="contact-info">
             <p>+27716876941</p>
-            <a href="https://wa.me/+27716876941" target="_blank" title="WhatsApp Shakex"><i class="fa-solid fa-mobile-screen-button"></i> ..whatsapp me</a>
+            <a href="https://wa.me/+27716876941" target="_blank" title="WhatsApp Shakex">WhatsApp<i class="fa-solid fa-mobile-screen-button"></i></a>
           </div>
         </article>
 
