--- a/index.html
+++ b/index.html
@@ -638,6 +638,7 @@
         <div class="links-grid">
           <!-- CODE-PEN-->
           <div class="socialMedia-item io-item codepen">
+            <i class="fab fa-codepen bg-i"></i>
             <p class="link-icon">codePen</p>
             <a href="https://codepen.io/bSempe" title="freeCodecamp" data-icon="codepen" target="_blank">
               <i class="fab fa-codepen"></i>@bsempe
@@ -645,6 +646,7 @@
           </div>
           <!-- FREE CODE CAMP -->
           <div class="socialMedia-item io-item fcc">
+            <i class="fab fa-free-code-camp bg-i"></i>
             <p class="link-icon">freeCodeCamp</p>
             <a href="https://www.freecodecamp.org/boitumelo-sempe" title="freeCodecamp" data-icon="FCC" target="_blank">
               <i class="fab fa-free-code-camp"></i>boitumelo sempe
@@ -652,6 +654,7 @@
           </div>
           <!-- FRONT-END-MENTOR -->
           <div class="socialMedia-item io-item fem">
+            <i class="fas fa-anchor bg-i"></i>
             <p class="link-icon">front-end-mentor</p>
             <a href="https://www.frontendmentor.io/profile/ShakexSempe" title="font-end-mentor" data-icon="FCC"
               target="_blank">
@@ -660,6 +663,7 @@
           </div>
           <!-- GIT-HUB -->
           <div class="socialMedia-item io-item github">
+            <i class="fab fa-github bg-i"></i>
             <p class="link-icon">github</p>
             <a href="https://github.com/ShakexSempe" title="github" data-icon="github" target="_blank">
               <i class="fab fa-github"></i>ShakexSempe
@@ -669,6 +673,7 @@
           <div class="socialMedia-item io-item linkedin">
             <!-- <i class="fas fa-link link-icon"></i> -->
             <p class="link-icon">linkedin</p>
+            <i class="fab fa-linkedin-in bg-i"></i>
             <a href="https://www.linkedin.com/in/boitumelo-sempe-525b2baa/" title="linkedin" data-icon="linkedin"
               target="_blank">
               <i class="fab fa-linkedin-in"></i>boitumelo Sempe
@@ -676,6 +681,7 @@
           </div>
           <!-- TWTTER -->
           <div class="socialMedia-item io-item twitter">
+            <i class="fab fa-twitter bg-i"></i>
             <p class="link-icon">twitter</p>
             <a href="https://twitter.com/Shake_x11" title="twitter" data-icon="twitter" target="_blank">
               <i class="fab fa-twitter"></i>@shake_x11
