--- a/index.html
+++ b/index.html
@@ -636,6 +636,16 @@
       <div class="socialMedia-links">
         <h2 data-scroll title="social media links" class="footer-section-title">my links</h2>
         <div class="links-grid">
+          <!-- LINKEDIN -->
+          <div class="socialMedia-item io-item linkedin">
+            <!-- <i class="fas fa-link link-icon"></i> -->
+            <p class="link-icon">linkedin</p>
+            <i class="fab fa-linkedin-in bg-i"></i>
+            <a href="https://www.linkedin.com/in/boitumelo-sempe-525b2baa/" title="linkedin" data-icon="linkedin"
+              target="_blank">
+              <i class="fab fa-linkedin-in"></i>boitumelo Sempe
+            </a>
+          </div>
           <!-- CODE-PEN-->
           <div class="socialMedia-item io-item codepen">
             <i class="fab fa-codepen bg-i"></i>
@@ -669,17 +679,7 @@
               <i class="fab fa-github"></i>ShakexSempe
             </a>
           </div>
-          <!-- LINKEDIN -->
-          <div class="socialMedia-item io-item linkedin">
-            <!-- <i class="fas fa-link link-icon"></i> -->
-            <p class="link-icon">linkedin</p>
-            <i class="fab fa-linkedin-in bg-i"></i>
-            <a href="https://www.linkedin.com/in/boitumelo-sempe-525b2baa/" title="linkedin" data-icon="linkedin"
-              target="_blank">
-              <i class="fab fa-linkedin-in"></i>boitumelo Sempe
-            </a>
-          </div>
-          <!-- TWTTER -->
+          <!-- TWITTER -->
           <div class="socialMedia-item io-item twitter">
             <i class="fab fa-twitter bg-i"></i>
             <p class="link-icon">twitter</p>
