--- a/index.html
+++ b/index.html
@@ -591,6 +591,7 @@
             <i class="fas fa-envelope"></i></div>
           </div>
           <div class="contact-info">
+            <h4>Email address</h4>
             <p>bshakex@gmail.com</p>
             <a href="mailto:bshakex@gmail.com" title="Send email to Shakex">send email<i class="fas fa-at"></i>
               </a>
@@ -605,6 +606,7 @@
           </div>
         </div>
           <div id="phone" class="contact-info">
+            <h4>phone number</h4>
             <p>+27 72 600 5104</p>
             <a href="tel:+27726005104" title="Call Shakex">call now<i class="fas fa-phone-alt"></i></a>
           </div>
@@ -618,8 +620,9 @@
           </div>
         </div>
           <div id="whatsapp" class="contact-info">
+            <h4>whatsApp contact</h4>
             <p>+27716876941</p>
-            <a href="https://wa.me/+27716876941" target="_blank" title="WhatsApp Shakex">WhatsApp<i class="fa-solid fa-mobile-screen-button"></i></a>
+            <a href="https://wa.me/+27716876941" target="_blank" title="WhatsApp Shakex">send text<i class="fa-solid fa-mobile-screen-button"></i></a>
           </div>
         </article>
 
