--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
           <div id="phone" class="contact-info">
             <h4>phone number</h4>
             <p>+27 72 600 5104</p>
-            <a href="tel:+27726005104" title="Call Shakex">call now<i class="fas fa-phone-alt"></i></a>
+            <a href="tel:+27726005104" title="Call Shakex">call now<i class="fas fa-phone-volume"></i></a>
           </div>
         </article>
         <!-- WHATSAPP NUMBER -->
@@ -622,7 +622,7 @@
           <div id="whatsapp" class="contact-info">
             <h4>whatsApp contact</h4>
             <p>+27716876941</p>
-            <a href="https://wa.me/+27716876941" target="_blank" title="WhatsApp Shakex">send text<i class="fa-solid fa-mobile-screen-button"></i></a>
+            <a href="https://wa.me/+27716876941" target="_blank" title="WhatsApp Shakex">send text<i class="fa-solid fa-comment-dots"></i></a>
           </div>
         </article>
 
