--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
 
 <body>
   <!-- LOADER -->
-  <div class="loader_bg">
+  <!-- <div class="loader_bg">
     <div class="spinner">
       <div class="sector sector-1"></div>
       <div class="sector sector-2"></div>
       <div class="sector sector-3"></div>
     </div>
-  </div>
+  </div> -->
   <!-- HEADER -->
   <header id="header" data-header class="header">
     <!-- SKIP TO MAIN LINK -->
@@ -190,9 +190,9 @@
           <button onclick="dropdown()" data-dropBtn title="View Full Skill-set" class="dropbtn cta">My Skills<i
               class="fa-regular fa-code"></i></button>
           <div id="myDropdown" class="dropdown-content">
+            <div class="top-btn" id="top-btn"><a href="#work" class="fa-solid fa-circle-xmark"></a></div>
 
             <div class="skills-bottom">
-              <div class="top-btn" id="top-btn"><a href="#work" class="fa-solid fa-circle-xmark"></a></div>
               
               <div title="HTML5" id="html5" class="skills-item io-item">
                 <div class="icon">
