contact item io

--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
       <div class="work-header">
         <h2 data-text="projects" class="section-title io-item io-item">pro<span>j</span>ects</h2>
       </div>
-      <div class="work-items">
+      <div class="work-items io-item">
         <!-- ORICH -->
         <div  class="work-item io-item io-item io-item">
           <div class="work-title">
@@ -563,18 +563,6 @@
       </div>
     </div>
   </section>
-    <!--PROJECTS SECTION-->
-    <section class="link-section" id="projects">
-      <div class="projects container">
-        <div class="projects-header">
-          <h2 title="repository links" data-text="portfolio" id="projects-h1" class="section-title io-item io-item">Port<span>f</span>olio
-          </h2>
-        </div>
-        <div data-scroll class="all-projects">
-          <!-- /PROJECTS.JS -->
-        </div>
-      </div>
-    </section>
   <!-- CONTACT SECTION-->
   <section class="link-section" id="contact">
     <div class="contact container">
@@ -629,6 +617,19 @@
     </div>
     <!-- end of padding section -->
   </section>
+    <!--PROJECTS SECTION-->
+    <section class="link-section" id="projects">
+      <div class="projects container">
+        <div class="projects-header">
+          <h2 title="repository links" data-text="portfolio" id="projects-h1" class="section-title io-item io-item">Port<span>f</span>olio
+          </h2>
+        </div>
+        <div data-scroll class="all-projects">
+          <!-- /PROJECTS.JS -->
+        </div>
+      </div>
+    </section>
+  
   <!-- FOOTER -->
   <section class="link-section" id="footer">
     <div class="footer container">
