--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
 
 <body>
   <!-- LOADER -->
-  <div class="loader_bg">
+  <!-- <div class="loader_bg">
     <div class="spinner">
       <div class="sector sector-1"></div>
       <div class="sector sector-2"></div>
       <div class="sector sector-3"></div>
     </div>
-  </div>
+  </div> -->
   <!-- HEADER -->
   <header id="header" data-header class="header">
     <!-- SKIP TO MAIN LINK -->
@@ -727,12 +727,12 @@
       <div id="footer-logo" class="section-pad pad-logo">
         <figure data-scroll>
           <a title="shakex sempe: web developer" href="#footer">
-            <img src="img/shakex-logo-min.png" loading="lazy" alt="Shakex Sempe logo">
+            <img src="img/shakex-sempe-logo.png" loading="lazy" alt="Shakex Sempe logo">
           </a>
         </figure>
       </div>
       <div data-scroll class="bs21">
-        <p>copyright&copy; Shakex Sempe</p>
+        <p>copyright&copy; Boitumelo Shakex Sempe</p>
         <a title="Shakex Sempe" href="https://shakexsempe.github.io/box-shadow/" target="_blank">box shadow</a>
         <span class="date"></span>
       </div>
