--- a/index.html
+++ b/index.html
@@ -732,7 +732,8 @@
         </figure>
       </div>
       <div data-scroll class="bs21">
-        <p>copyright&copy; Boitumelo Shakex Sempe</p>
+        <p>copyright&copy; Boitumelo Sempe</p>
+        <p>Mahikeng, South Africa</p>
         <a title="Shakex Sempe" href="https://shakexsempe.github.io/box-shadow/" target="_blank">box shadow</a>
         <span class="date"></span>
       </div>
