footer-nav links

--- a/pages/skills.html
+++ b/pages/skills.html
@@ -217,13 +217,13 @@
     <!-- BOTTOM NAVIGATION -->
     <div class="bottom-nav" id="bottom-nav">
     <figure class="link-item item-1">
-        <a href="#about"><i class="fas fa-user"></i>about</a>
+        <a href="https://wa.me/+27716876941" target="_blank"><i class="fa-brands fa-whatsapp"></i>WhatsApp</a>
     </figure>
     <figure class="link-item item-2">
-        <a href="#home"><i class="fas fa-house"></i>home</a>
+        <a href="#"><i class="fas fa-house"></i>home</a>
     </figure>
     <figure class="link-item item-3">
-        <a href="pages/work.html" target="_blank"><i class="fa-regular fa-code"></i>work</a>
+        <a href="pages/work.html" target="_blank"><i class="fas fa-envelope"></i>work</a>
     </figure>
 </div>
     <!-- PRELOADER SCRIPT -->
