--- a/index.html
+++ b/index.html
@@ -744,14 +744,13 @@
 <!-- BOTTOM NAVIGATION -->
 <div class="bottom-nav" id="bottom-nav">
   <figure class="link-item io-item item io-item-1">
-    <!-- <a href="#about"><i class="fas fa-user"></i>about</a> -->
-    <a href="mailto:bshakex@gmail.com"><i class="fas fa-envelope"></i>contact</a>
+    <a href="https://wa.me/+27716876941"><i class="fa-brands fa-whatsapp"></i>WhatsApp</a>
   </figure>
   <figure class="link-item io-item item io-item-2">
     <a href="#home"><i class="fas fa-house"></i>home</a>
   </figure>
   <figure class="link-item io-item item io-item-3">
-    <a href="pages/work.html" target="_blank"><i class="fa-solid fa-layer-group"></i>work</a>
+    <a href="mailto:bshakex@gmail.com"><i class="fas fa-envelope"></i>email</a>
   </figure>
 </div>
 <!-- PRELOADER SCRIPT -->
