logo pag footer

--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@
       <!-- end of contact form -->
       <!-- padding section -->
       <div id="footer-logo" class="section-pad pad-logo">
-        <figure data-scroll>
+        <figure class="io-item">
           <a title="shakex sempe: web developer" href="#footer">
             <img src="img/shakex-sempe-logo.png" loading="lazy" alt="Shakex Sempe logo">
           </a>
