--- a/thanks.html
+++ b/thanks.html
@@ -27,12 +27,12 @@
     <link rel="shortcut icon" href="icons/favicon.ico">
     <!-- CSS LINK -->
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" defer />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
 </head>
 <body>
     <!-- HEADER -->
-    <header id="header" data-header class="header">
+    <header id="header" data-header class="header thanks-header">
         <!-- SKIP TO MAIN LINK -->
         <a class="skip-link" href="#main">skip to main content</a>
         <div class="navbar">
@@ -46,7 +46,7 @@
         </div>
     </header>
     <!--HERO-->
-    <section id="home" data-hero class="section welcome-section">
+    <section id="thanks" data-hero class="section welcome-section">
         <div class="hero">
             <div id="hero-content">
                 <div class="hero-title">
@@ -55,6 +55,7 @@
                         Thank you!
                     </h1>
                     <p>I will be in touch shortly..</p>
+                    <a href="index.html" class="home-link"><i class="fas fa-house"></i>Homepage</a>
                 </div>
                 <a href="#main" type="button" title="Shakex Sempe: Web Developer" id="cta-header" class="scroll-link">
                     <span style="--i:1;">S</span>
