skills drop btn clamp width and fs

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         <!--Dropdown-->
         <div class="dropdown" id="dropdown">
           <button onclick="dropdown()" data-dropBtn title="View Full Skill-set" class="dropbtn cta">My Skills<i
-              class="fa-regular fa-code"></i></button>
+              class="fa-solid fa-caret-down"></i></button>
           <div id="myDropdown" class="dropdown-content">
             <div class="top-btn" id="top-btn"><a href="#work" class="fa-solid fa-circle-xmark"></a></div>
 
