skills intro padding

--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
 
 <body>
   <!-- LOADER -->
-  <div class="loader_bg">
+  <!-- <div class="loader_bg">
     <div class="spinner">
       <div class="sector sector-1"></div>
       <div class="sector sector-2"></div>
       <div class="sector sector-3"></div>
     </div>
-  </div>
+  </div> -->
   <!-- HEADER -->
   <header id="header" data-header class="header">
     <!-- SKIP TO MAIN LINK -->
@@ -427,6 +427,32 @@
     <div class="work">
       <div class="work-header">
         <h2 data-text="projects" class="section-title io-item io-item">pro<span>j</span>ects</h2>
+      </div>
+      <div class="work-container">
+        <!-- ITEM -->
+        <div class="item">
+          <!-- FLEX: TITLE + CONTENT -->
+          <div class="item-flex-container">
+            <div class="item-header">
+              <h3 class="item-title">orich trading & projects</h3>
+              <ul class="item-meta-data">
+                <li>html</li>
+                <li>sass</li>
+                <li>javascript</li>
+              </ul>
+              <p class="item-description">Small business website homepage</p>
+              <div class="item-cta">
+                <a href="https://orichtrading.co.za" target="_blank">view website</a>
+                <a href="https://orichtrading.co.za" target="_blank">view repository</a>
+              </div>
+            </div>
+            <div class="item-content">
+              <figure class="item-image">
+                <img src="img/orich-min.jpg" alt="Orich Trading & Projects logo">
+              </figure>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="work-items io-item">
         <!-- ORICH -->
